WIP: starting fresh

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,8 @@
     "plugin:import/electron",
     "plugin:import/typescript"
   ],
-  "parser": "@typescript-eslint/parser"
+  "parser": "@typescript-eslint/parser",
+  "rules": {
+    "semi": ["error", "never"]
+  }
 }
