--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,7 @@
   "printWidth": 100,
   "singleQuote": true,
   "tabWidth": 2,
-  "semi": true,
+  "semi": false,
   "endOfLine": "lf",
   "trailingComma": "all"
 }
