--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "i18next": "^25.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "wouter": "^3.7.1",
+    "zustand": "^5.0.8"
   }
 }
